# urchin

./: .gitignore  CMakeLists.txt  README.md
src/client/: command_cli.c  command_cli.h  main.c
src/server/: command.c  command.h  command_internal.h  main.c  world.c  world.h
src/shared_lib/: error.c  error.h
urchin-util/: CMakeLists.txt
urchin-util/include/: error.h  message.h  message_internal.h  world_structures.h
urchin-util/protobuf/: amessage.proto  commands.proto  player.proto
urchin-util/src/: error.c  message.c
